cambios en Context profundios ,,

--- a/BlazorSeguridad2026/BlazorSeguridad2026.Seguridad/Seguridad/ComponenteUsers.razor
+++ b/BlazorSeguridad2026/BlazorSeguridad2026.Seguridad/Seguridad/ComponenteUsers.razor
@@ -205,6 +205,7 @@
     private string? editEmail;
     private int? editTenantId;
     private string? editKeyDb;
+    IContextProvider localContext;
 
     private class NewUserModel
     {
@@ -244,16 +245,16 @@
         {
             if (ContextProvider.IsValid())
             {
-                await ContextProvider.ReadAllContext(true);
-                var cp = ContextProvider.Copia();
+                localContext = await ContextProvider.CreateReadAll(); 
+           
                 // cp._AppState.DbKey = "Application";
                 // cp._AppState.ConnectionMode = "Api";
-                userService= new UserServiceMio(UserManager, cp, UnitOfWorkFactory);
+                userService = new UserServiceMio(UserManager, localContext, UnitOfWorkFactory);
                 var list = await userService.GetAllAsync();
                 if (list is null) return;           
                 users = list.ToList();
-                newUserModel.TenantId = ContextProvider._AppState.TenantId;
-                newUserModel.DbKey = ContextProvider._AppState.DbKey;
+                newUserModel.TenantId = localContext.AppState.TenantId;
+                newUserModel.DbKey = localContext.AppState.DbKey;
                 _isValidContext = true;
             }
             else _isValidContext = false;
@@ -272,8 +273,8 @@
         selectedUserId = u.Id;
 
         editEmail = u.Email;
-        editTenantId = ContextProvider._AppState.TenantId;
-        editKeyDb = ContextProvider._AppState.DbKey;
+        editTenantId = localContext.AppState.TenantId;
+        editKeyDb = localContext.AppState.DbKey;
 
         error = success = null;
     }
