--- a/BlazorSeguridad2026/BlazorSeguridad2026.Seguridad/Seguridad/ComponenteRoles.razor
+++ b/BlazorSeguridad2026/BlazorSeguridad2026.Seguridad/Seguridad/ComponenteRoles.razor
@@ -231,16 +231,15 @@
         {
             if (ContextProvider.IsValid())
             {
-                await ContextProvider.ReadAllContext(true);
-                var cp = ContextProvider.Copia();
+                var cp = await ContextProvider.CreateReadAll();  
                 // cp._AppState.DbKey = "Application";
                 // cp._AppState.ConnectionMode = "Api";
                 var user = new RoleServiceMio(RoleManager, cp, UnitOfWorkFactory);
                 var list = await user.GetAllAsync();
                 if (list is null) return;
                 roles = list.ToList();
-                newRoleModel.TenantId = ContextProvider._AppState.TenantId ?? 0;
-                newRoleModel.DbKey = ContextProvider._AppState.DbKey;
+                newRoleModel.TenantId = ContextProvider.AppState.TenantId ?? 0;
+                newRoleModel.DbKey = ContextProvider.AppState.DbKey;
                 _isValidContext = true;
             }
             else _isValidContext = false;
@@ -257,8 +256,8 @@
     {
         editingRoleId = role.Id;
         editRoleName = role.Name;
-        editDbKey = ContextProvider._AppState.DbKey ?? "";
-        editTenantId = ContextProvider._AppState.TenantId??0;
+        editDbKey = ContextProvider.AppState.DbKey ?? "";
+        editTenantId = ContextProvider.AppState.TenantId??0;
         error = success = null;
     }
 
