--- a/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026.Client/Pages/DeleteUsuarioCliente.razor
+++ b/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026.Client/Pages/DeleteUsuarioCliente.razor
@@ -17,13 +17,13 @@
 
 <PageTitle> Delete Cliente</PageTitle>
 
-<p>TenantId <strong>@ContextProvider._AppState.TenantId</strong>:</p>
-<p>ContextKeDb <strong>@ContextProvider._AppState.DbKey</strong>:</p>
-<p>Mode <strong>@ContextProvider._AppState.ConnectionMode</strong>:</p>
+<p>TenantId <strong>@ContextProvider.AppState.TenantId</strong>:</p>
+<p>ContextKeDb <strong>@ContextProvider.AppState.DbKey</strong>:</p>
+<p>Mode <strong>@ContextProvider.AppState.ConnectionMode</strong>:</p>
 
-@if (@ContextProvider._AppState.ConnectionMode != "Ef")
+@if (@ContextProvider.AppState.ConnectionMode != "Ef")
 {
-    <p>ApiName <strong>@ContextProvider._AppState.ApiName</strong>:</p>
+    <p>ApiName <strong>@ContextProvider.AppState.ApiName</strong>:</p>
 }
 
 @if (NewUser != null)
@@ -112,6 +112,7 @@
 
     bool displayValidationErrorMessages;
     bool displayUserAddedToDB;
+    IContextProvider? localContext;
 
     // proxy síncrono para el evento
     private void OnContextChangedProxy() => _ = HandleContextChangedAsync();
@@ -129,16 +130,16 @@
         ContextProvider.OnContextChanged += OnContextChangedProxy;
 
         // 2. Inicializar desde localStorage (JS interop seguro aquí)
-        await ContextProvider.ReadAllContext(true);
+        localContext = await ContextProvider.CreateReadAll(); 
 
         // 3. Leer estado actual
-        estadoCliente = ContextProvider.GetValor(ClavesEstado.PaginaCliente) ?? "Ninguno";
-        estadoServidor = ContextProvider.GetValor(ClavesEstado.PaginaServidor) ?? "Ninguno";
+        estadoCliente = localContext.GetValor(ClavesEstado.PaginaCliente) ?? "Ninguno";
+        estadoServidor = localContext.GetValor(ClavesEstado.PaginaServidor) ?? "Ninguno";
 
 
         // 4. Persistir de nuevo en el contexto
 
-        await ContextProvider.UpdateEstadoContext();
+        await localContext.UpdateEstadoContext();
 
         _initialized = true;
         _isInitializing = false;
@@ -189,7 +190,7 @@
             else 
             {
                 NewUser = new Usuario();
-                NewUser.TenantId = ContextProvider._AppState.TenantId;
+                NewUser.TenantId = localContext.AppState.TenantId;
             }
             StateHasChanged();
         }
