--- a/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/Pages/DeleteUsuario.razor
+++ b/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/Pages/DeleteUsuario.razor
@@ -13,9 +13,9 @@
 @implements IDisposable
 
 
-<p>TenantId <strong>@ContextProvider._AppState.TenantId</strong>:</p>
-<p>ContextKeDb <strong>@ContextProvider._AppState.DbKey</strong>:</p>
-<p>ApiName <strong>@ContextProvider._AppState.ApiName</strong>:</p>
+<p>TenantId <strong>@ContextProvider.AppState.TenantId</strong>:</p>
+<p>ContextKeDb <strong>@ContextProvider.AppState.DbKey</strong>:</p>
+<p>ApiName <strong>@ContextProvider.AppState.ApiName</strong>:</p>
 
 @if (NewUser != null)
 {
@@ -157,7 +157,7 @@
             else 
             {
                 NewUser = new Usuario();
-                NewUser.TenantId = ContextProvider._AppState.TenantId;
+                NewUser.TenantId = ContextProvider.AppState.TenantId;
             }
 
         }
