--- a/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/Pages/ListaUsuarios.razor
+++ b/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/Pages/ListaUsuarios.razor
@@ -1,17 +1,20 @@
 ﻿@page "/ListaUsuarios"
-@rendermode @(new InteractiveServerRenderMode(prerender: false))
+
 
 @using BlazorSeguridad2026.Base.Genericos
 @using BlazorSeguridad2026.Base.Seguridad
 @using BlazorSeguridad2026.Data.Modelo
 @using BlazorSeguridad2026.Data.Servicios
 
+@rendermode @(new InteractiveServerRenderMode(prerender: false))
+
+
 @inject IUnitOfWorkFactory UnitOfWorkFactory 
 @inject IContextProvider ContextProvider 
 
-@inject NavigationManager nav
+
 @implements IDisposable
-@inject PersistentComponentState PersistenceAppState
+
 
 
 
@@ -68,7 +71,7 @@ else
 @code {
 
 
-    [PersistentState]
+
     public List<Usuario>? usuarios { get; set; } = new List<Usuario>();
     int TenantId;
     string ContextoKey ="Key";
@@ -79,6 +82,7 @@ else
     bool _isValidContext;
 
     private Action? _onContextChangedHandler;
+    IContextProvider localContext;
 
     protected override async Task OnInitializedAsync()
     {
@@ -105,7 +109,7 @@ else
     {
             if (ContextProvider.IsValid())
             {  
-                await ContextProvider.ReadAllContext(true);
+             localContext =   await ContextProvider.CreateReadAll();
             estadoCliente = ContextProvider.GetValor(ClavesEstado.PaginaCliente) ?? "Ninguno";
             estadoServidor = ContextProvider.GetValor(ClavesEstado.PaginaServidor) ?? "Ninguno";
             estadoCultura = ContextProvider.GetCultureName();
@@ -122,7 +126,7 @@ else
             {  
                 ServicioUsuarios? servicioUsuarios = null;
                 if (servicioUsuarios is null)
-                servicioUsuarios = new ServicioUsuarios(ContextProvider, UnitOfWorkFactory);
+                servicioUsuarios = new ServicioUsuarios(localContext, UnitOfWorkFactory);
                 var list = await servicioUsuarios.ObtenerTodosAsync(true);
                 if (list is null) return;
                 usuarios = list.ToList();
